# belajar-ros2

./: .gitignore  AGENTS.md  README.md  README.txt  opencode.json  pyrightconfig.json
Dasar ROS2/: Materi.txt  README.md
Dasar ROS2/config/: README.txt  params.yaml
Dasar ROS2/docs/: KORELASI.md  README.txt  disclaimer.md
Dasar ROS2/explore/: README.txt
Dasar ROS2/launch/: README.txt  explore_nodes.launch.py
Dasar ROS2/logs/: README.txt  agent-log.md
Dasar ROS2/modul/: 01-environment.md  01-sourcing.md  02-turtlesim.md  02-workspace.md  03-node.md  03-package.md  04-create-package.md  04-topic-pub-sub.md  05-build-package.md  05-service.md  06-parameter.md  06-source-workspace.md  07-action.md  07-callback-event-timer.md  08-micro-ros-arduino.md  08-workspace-package.md  09-launch.md  09-node.md  10-callback-timer.md  10-topic-pub-sub.md  11-micro-ros.md  11-service.md  12-action.md  12-custom-interfaces.md  README.txt
Dasar ROS2/scripts/: README.txt  source_ros.sh
Dasar ROS2/src/: README.txt
Dasar ROS2/src/ros2_basics/: README.txt  package.xml  setup.cfg  setup.py
Dasar ROS2/src/ros2_basics/launch/: all_nodes.launch.py
Dasar ROS2/src/ros2_basics/ros2_basics/: __init__.py  action_client_node.py  action_server_node.py  custom_msg_types.py  custom_pub_node.py  custom_sub_node.py  listener_node.py  param_node.py  service_client_node.py  service_server_node.py  talker_node.py
Penerapan ROS2 pada Komponen yang Umum ditemui/: AGENTS.md  README.md  README.txt
_scripts/: md2docx.py
docs/: ERRORS.md
logs/: agent-log.md
scripts/: source_ros.sh
(+173 files in other folders)
