<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypesxsd="http://www.w3.org/2001/XMLSchema-instance"?>
<package format="3">
  <name>ros2_basics</name>
  <version>0.1.0</version>
  <description>
    Paket ROS2 untuk belajar dasar ROS2.
    Berisi node: talker, listener, service server/client, action server/client, custom msg, dan parameter.
  </description>
  <maintainer email="belajar@ros2.local">Belajar ROS2</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>example_interfaces</depend>
  <depend>ros2launch</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
